# ToolOrchestra

./: .gitignore  LLM_CALL.py  PROJECT_PLAN.md
orchestrator-rhoai/: .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
orchestrator-rhoai/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
orchestrator-rhoai/.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
orchestrator-rhoai/.github/workflows/: ci.yaml  container-build.yaml  release.yaml
orchestrator-rhoai/docs/: index.md  mkdocs.yml  presentation-slide-content.md  presentation-talking-points.md
orchestrator-rhoai/docs/adr/: 0001-use-kserve-for-serving.md  0002-open-models-only.md  0003-tiered-deployment.md  0004-gateway-pattern.md  0005-kustomize-over-helm.md  template.md
orchestrator-rhoai/docs/architecture/: model-strategy.md  overview.md  tool-routing.md
orchestrator-rhoai/docs/blog/: index.md
orchestrator-rhoai/docs/getting-started/: cluster-setup.md  prerequisites.md  quickstart.md
orchestrator-rhoai/docs/guides/: configure-tools.md  deploy-orchestrator.md  deploy-specialists.md  production-hardening.md  run-evaluation.md  training-pipeline.md
orchestrator-rhoai/docs/reference/: api.md  configuration.md  model-mapping.md  troubleshooting.md
orchestrator-rhoai/examples/: curl-examples.sh
orchestrator-rhoai/manifests/base/config/: kustomization.yaml  model-mapping-configmap.yaml  orchestrator-config-configmap.yaml  tool-definitions-configmap.yaml
orchestrator-rhoai/manifests/infra/: gpu-machineset.yaml
orchestrator-rhoai/manifests/services/gateway/: deployment.yaml  route.yaml  service.yaml
orchestrator-rhoai/manifests/services/ui/: route.yaml
orchestrator-rhoai/manifests/serving/orchestrator/: download-job.yaml  download-missing-shard-job.yaml  inference-service.yaml  serving-runtime.yaml
orchestrator-rhoai/manifests/serving/qwen-math-7b/: inference-service.yaml  kustomization.yaml  (+1 more)
orchestrator-rhoai/profiles/tier1-minimal/: kustomization.yaml
orchestrator-rhoai/profiles/tier2-standard/: kustomization.yaml
orchestrator-rhoai/profiles/tier3-full/: kustomization.yaml
orchestrator-rhoai/scripts/: download-models.sh  setup-cluster.sh  smoke-test.sh
orchestrator-rhoai/src/code_sandbox/: Containerfile  pyproject.toml
orchestrator-rhoai/src/evaluation/: pyproject.toml
orchestrator-rhoai/src/gateway/: Containerfile  pyproject.toml
orchestrator-rhoai/src/pipeline/: comparison_pipeline.py  comparison_pipeline.yaml  orchestration_pipeline.py  orchestration_pipeline.yaml  pipeline_branching.py  pipeline_branching.yaml  pipeline_function_tools.py  pipeline_function_tools.yaml  pipeline_model_switching.py  pipeline_model_switching.yaml  pipeline_rag_filesearch.py  pipeline_rag_filesearch.yaml
orchestrator-rhoai/src/retrieval/: Containerfile  pyproject.toml
orchestrator-rhoai/src/ui/: Containerfile  config.yaml  index.html  requirements.txt  server.py  tools.json
(+34 files in other folders)
